# BCF-FEM

./: CMakeLists.txt  README.md
BCF-FEM/: CMakeLists.txt
BCF-FEM/app/: run_our_phantom.cpp  run_pbsm_dataset.cpp  run_sparse_dataset.cpp
BCF-FEM/include/: Common.h  ForceDrivenRegistration.h  downsamplePointCloud.h  pts_tools.h  run_registration.h
BCF-FEM/src/: CMakeLists.txt  ForceDrivenRegistration.cpp  Matrix3D.cpp  downsamplePointCloud.cpp
Data_Format_Prepare/: format_transfer.py  prepare_dataset.py
Evaluation/: eva_our_dataset.py  eva_pbsm_dataset.py  eva_sparse_dataset.py
app/: Demo.cpp
include/: FEM3DD.h  ImageIO.h  Matrix3D.h
src/: FEM3DD.cpp  pts_tools.cpp  run_registration.cpp
